# pyfamilysafety

./: .coveragerc  .gitignore  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  requirements.docs.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.py
.github/workflows/: build.yml  dependancy-review.yml  documentation.yml  publish.yml  release.yml
advanced/architecture/: index.html
advanced/endpoints/: index.html
advanced/error-handling/: index.html
advanced/logging/: index.html
advanced/timezones/: index.html
changelog/: index.html
docs/: changelog.md  endpoints.xlsx  faq.md  index.md
docs/advanced/: architecture.md  endpoints.md  error-handling.md  logging.md  timezones.md
docs/getting-started/: authentication.md  installation.md  quick-start.md
docs/guide/: accounts.md  applications.md  device-limits.md  device-overrides.md  devices.md  family-safety-client.md  pending-requests.md  screen-time.md  spending.md  web-filtering.md
docs/reference/: account.md  api-internals.md  application.md  authenticator.md  device.md  enums.md  exceptions.md  family-safety.md  index.md  schedule.md
faq/: index.html
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guide/accounts/: index.html
guide/applications/: index.html
pyfamilysafety/: __init__.py  _version.py  account.py  api.py  application.py  const.py  device.py  enum.py  exceptions.py  helpers.py  schedule.py
reference/: index.html
search/: search_index.json
(+19 files in other folders)
