[metadata]
name = pyfamilysafety
description = Microsoft Family Safety API library
long_description_content_type = text/markdown
url = https://github.com/pantherale0/pyfamilysafety
project_urls =
    Bug Tracker = https://github.com/pantherale0/pyfamilysafety/issues
    Changelog = https://github.com/pantherale0/pyfamilysafety/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
